Update the Aidan Do link at the bottom

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="flex justify-start mb-10 text-sm text-gray-100 sm:pl-12 lg:justify-end">
          <span>
-            Project by <a class="underline" href="https://www.linkedin.com/in/aidando">Aidan Do</a>
+            Designed and built by <a class="underline" href="https://aidando.com">Aidan Do</a>
          </span>
       </div>
    </div>
